# MensaBot

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_build  LICENSE.md  README.md  docker-compose.yml  env.variables
.github/workflows/: docker-image.yml
.no_github/workflows/: docker-image.yml
src/: database.rs  logging.rs  main.rs  message_sender.rs  models.rs  postgres_client.rs
