[package]
name = "htwmensa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "htwmensa"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk= "0.4.0"
serde = {version="1.0.164", features = ["derive"]}
reqwest = {version="0.11.18", features = ["blocking", "json", "async-compression", "rustls"]}
chrono = { version = "0.4", default-features = false, features = ["serde"] }
tokio = {version = "1.28.2", features = ["full"]}
postgres = {version = "0.19.5", features = ["with-chrono-0_4"]}
teloxide = { version = "0.12.0", features = ["macros", "rustls"] }
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.8.4"
uuid = {version = "1.3.4", features = ["v4"]}