[package]
name = "htwmensa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "htwmensa"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk= "0.4.0"
serde = {version="1.0.196", features = ["derive"]}
reqwest = {version="0.11.24", features = ["blocking", "json", "async-compression", "rustls"]}
chrono = { version = "0.4", default-features = false, features = ["serde"] }
tokio = {version = "1.29.1", features = ["full"]}
postgres = {version = "0.19.7", features = ["with-chrono-0_4"]}
teloxide = { version = "0.12.0", features = ["macros", "rustls"] }
env_logger = "0.11.1"
log = "0.4.20"
regex = "1.10.3"
uuid = {version = "1.7.0", features = ["v4"]}